kubernetes/focalboard/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  focalboard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: focalboard
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      enableServiceLinks: false
      containers:
      - name:  focalboard
        image:  mattermost/focalboard:0.6.7
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8000
          name:  http
        volumeMounts:
          - name:  focalboard-config
            mountPath:  /opt/focalboard/config.json
            subPath:  config.json
          - name: focalboard-files
            mountPath: /files
      volumes:
        - name: focalboard-config
          configMap:
            name: focalboard-config
        - name: focalboard-files
          persistentVolumeClaim:
            claimName: focalboard-files
      restartPolicy: Always
